<resources>
    <string name="app_name">KChat</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="account">Não tem uma conta? Clique aqui</string>
    <string name="cadastro">Cadastro</string>
    <string name="informe_o_nome">Informe o nome</string>
    <string name="informe_o_e_mail">Informe o e-mail</string>
    <string name="informe_a_senha">Informe a senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="foto">Foto</string>
    <string name="contatos">Contatos</string>
    <string name="logout">Logout</string>
    <string name="perfil">Perfil</string>
</resources>
