<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E6E6"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/email"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/bg_edittext_rounded"
        android:hint="@string/password"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_rounded"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/account"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_enter"
        app:layout_constraintStart_toStartOf="@+id/btn_enter"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>